<resources>
    <string name="app_name">L_1_N</string>
    <string name="name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="b_save">Zapisz</string>
    <string name="tv_name">Podaj Imie i Nazwisko</string>
    <string name="c_name">Nazwa kraju: </string>
    <string name="c_capital">Stolica: </string>
    <string name="c_area">Powieszchnia: </string>
    <string name="c_area_unit"> km2</string>
    <string name="c_population">Populacja</string>
    <string name="c_population_unit"> mln </string>
    <string name="c_continent"> Kontynent </string>
</resources>